tests/slp30_for_in_protocol_non_bool_bad.stderr
tests/slp30_for_in_protocol_non_bool_bad.sl:27:15: error: SL2091: for-in next_value overload must return ?T
